--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -24,7 +24,8 @@
             <div class="card" id="social">
                 <p class="card_title" id="s">Social</p>
                 <a href="https://www.reddit.com/">Reddit</a>
-                <a href="https://www.twitter.com/home">Twitter</a>    
+                <a href="https://www.twitter.com/home">Twitter</a>
+                <a href="https://www.facebook.com">Facebook</a>     
             </div>
             <div class="card" id="dev">
                 <p class="card_title" id="d">Dev</p>
