--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -40,6 +40,7 @@
             </div>
             <div class="card" id="email">
                 <p class="card_title" id="e">Email</p>
+                <a href="https://protonmail.com">Protonmail</p>
                 <a href="https://mail.google.com/mail/u/0/#inbox">Personal</a>
                 <a href="https://mail.google.com/mail/u/1/#inbox">School</a>
             </div>
